[HIVEMALL-242][HIVEMALL-241] Drop support for Spark 2.1 and Deprecate Java7 for packaging
## What changes were proposed in this pull request?

- Drop support for Spark 2.1
- Require Java8 for packaging, deprecating Java7 (class file compatibility is Java7 or later)

Runtime Java compatibility: Java7 or later
Packaging/Compile-time Java compatibility: Java8 or later

## What type of PR is it?

Hot Fix

## What is the Jira issue?

https://issues.apache.org/jira/browse/HIVEMALL-242
https://issues.apache.org/jira/browse/HIVEMALL-241

## How was this patch tested?

unit tests, manual tests

## Checklist

- [x] Did you apply source code formatter, i.e., `./bin/format_code.sh`, for your commit?
- [ ] Did you run system tests on Hive (or Spark)?

Author: Makoto Yui <myui@apache.org>

Closes #186 from myui/drop-spark2_1.